--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: Syue
+subtitle: Syue2
 description: 每日一博
 keywords:
 author: ShaoYue Lin
