--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 林少岳的博客
-subtitle: 坚持不懈，持续学习
-description: 每日一博
+subtitle: 学而不思则罔 思而不学则殆
+description: 持续学习
 keywords:
 author: ShaoYue Lin
 language: zh-Hans
